--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/console": "^10.0|^11.0",
-        "illuminate/mail": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0"
+        "php": "^8.1",
+        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/mail": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.5",
-        "orchestra/testbench": "^8.0|^9.0",
-        "phpunit/phpunit": "^10.1"
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^10.1|^11.0"
     },
     "autoload": {
         "psr-4": {
